--- a/index.html
+++ b/index.html
@@ -7,10 +7,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Decodaquote with Bulma</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <script src="https://kit.fontawesome.com/d13891405c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <section>
+        <div class="columns">
+            <div class="column">
+            </div>
+            <div class="column">
+                <div class="card">
+                    <header class="card-header">
+                        <p class="card-header-title">
+                            Decode This!
+                        </p>
+                        <!-- <button class="card-header-icon" aria-label="more options">
+                            <span class="icon">
+                                <i class="far fa-question-circle" aria-hidden="true"></i>
+                            </span>
+                        </button> -->
+                    </header>
+                    <div class="card-content">
+                        <div class="content">
+
+                            <p class="quote"></p>
+
+                        </div>
+                    </div>
+                    <footer class="card-footer">
+                        <input class="input is-link is-medium from" id="from" type="text" placeholder="From">
+                        <input class="input is-primary is-medium to" id="to" type="text" placeholder="To">
+                        <button class="button is-primary is-medium is-fullwidth swap" id="swap">Change Letters</button>
+                    </footer>
+                </div>
+                <div class="box">
+                    Recent Changes
+                    <div class="changes">
+
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+
+            </div>
+    </section>
+
+    <div class="modal">
+        <div class="modal-background"></div>
+        <div class="modal-card">
+            <header class="modal-card-head">
+                <p class="modal-card-title">Congratulations! You Decoded It!</p>
+                <button class="delete" aria-label="close"></button>
+            </header>
+            <div class="modal-card-body">
+                <blockquote></blockquote>
+                <p class="author"></p>
+            </div>
+            <footer class="modal-card-foot">
+            </footer>
+        </div>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <script src="app.js"></script>
 </body>
 
