Added class to sections to help with mobile issues.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <section>
         <div class="columns">
-            <div class="column">
+            <div class="column hide-mobile">
             </div>
             <div class="column">
                 <div class="card">
@@ -48,7 +48,7 @@
                     </div>
                 </div>
             </div>
-            <div class="column">
+            <div class="column hide-mobile">
 
             </div>
     </section>
