MVP is mostly complete -- needs TIGR and some other niceties

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <div class="columns">
             <div class="column hide-mobile">
             </div>
-            <div class="column">
+            <div class="column is-three-fifths
+
+            ">
                 <div class="card">
                     <header class="card-header">
                         <p class="card-header-title">
@@ -41,17 +43,18 @@
 
                     </footer>
                 </div>
-                <div class="box">
-                    Recent Changes
-                    <div class="changes">
+                <div class="box changes">
+                    <span class="instruct">Decode letters by using the "From" & "To" inputs.</span>
 
-                    </div>
                 </div>
             </div>
             <div class="column hide-mobile">
 
             </div>
     </section>
+
+    <div class="modal"></div>
+
 
 
 
