updated html format

--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
 
 <body>
     <section>
-        <div class="columns">
-            <div class="column hide-mobile">
-            </div>
-            <div class="column is-three-fifths
 
-            ">
+        <div class="column is-three-fifths">
+
+            <section id='app'>
+
                 <div class="card">
                     <header class="card-header">
                         <p class="card-header-title">
@@ -47,10 +46,9 @@
                     <span class="instruct">Decode letters by using the "From" & "To" inputs.</span>
 
                 </div>
-            </div>
-            <div class="column hide-mobile">
+        </div>
+    </section>
 
-            </div>
     </section>
 
     <div class="modal"></div>
