updated CSS a bit

--- a/index.html
+++ b/index.html
@@ -51,89 +51,95 @@
                     </footer>
                 </div>
 
-        </div>
-    </section>
+                <div class="modal is-active">
+                    <div class="modal-background"></div>
+                    <div id="instructions" class="modal-card">
+                        <header class="modal-card-head">
+                            <p class="modal-card-title">Decode This: How to Start</p>
+                            <button class="delete" aria-label="close"></button>
+                        </header>
+                        <section class="modal-card-body">
 
-    </section>
+                            <div class="content">
+                                <h4>About</h4>
+                                <p>Decode this is an encryption game. Your goal is to decode a quote from a free API of
+                                    inspirational quotes.
+                                </p>
+                                <p>
+                                    All of the letters in the quote have been switched with another random letter -- for
+                                    example all
+                                    of the "l"s in the example below have been changed for "e"s.
+                                </p>
+                                <h4>Example</h4>
+                                <blockquote id="example">Hello World<br>
+                                    Ndeeq Sqpez</blockquote>
+                                <h4>How to Decode a Quote</h4>
 
-    <div class="modal is-active">
-        <div class="modal-background"></div>
-        <div id="instructions" class="modal-card">
-            <header class="modal-card-head">
-                <p class="modal-card-title">Decode This: How to Start</p>
-                <button class="delete" aria-label="close"></button>
-            </header>
-            <section class="modal-card-body">
+                                <p>
+                                    It's a trial and error process -- use the 'from' and 'to' boxes to swap out a letter
+                                    that you
+                                    think may move you toward a solution.
+                                </p>
+                                <p>
+                                    If you make a mistake, click the incorrect letter to revert it to the original
+                                    encoded letter.
+                                </p>
+                                <h4>Tips</h4>
 
-                <div class="content">
-                    <h4>About</h4>
-                    <p>Decode this is an encryption game. Your goal is to decode a quote from a free API of
-                        inspirational quotes.
-                    </p>
-                    <p>
-                        All of the letters in the quote have been switched with another random letter -- for example all
-                        of the "l"s in the example below have been changed for "e"s.
-                    </p>
-                    <h4>Example</h4>
-                    <blockquote id="example">Hello World<br>
-                        Ndeeq Sqpez</blockquote>
-                    <h4>How to Decode a Quote</h4>
+                                <p>
+                                    The most common letters in the English Alphabet are e, t, a, i, o, n, s, h, and r.
 
-                    <p>
-                        It's a trial and error process -- use the 'from' and 'to' boxes to swap out a letter that you
-                        think may move you toward a solution.
-                    </p>
-                    <p>
-                        If you make a mistake, click the incorrect letter to revert it to the original encoded letter.
-                    </p>
-                    <h4>Tips</h4>
+                                </p>
+                                <p>
+                                    Single-letter words are always "I" or "A".
+                                </p>
+                                <p>
+                                    After that, if you get stuck, remember that "the" is the most common three-letter
+                                    word in
+                                    English.
+                                </p>
+                                <p>
+                                    Other common three-letter words are: and, are, for, not, but, had, has, was, all,
+                                    any, one, man,
+                                    out, you, his, her, & can.
+                                </p>
+                                <p>
+                                    If the second to last character of a word is an apostrophe, then the word likely
+                                    ends with a "T"
+                                    or
+                                    "S," but sometimes a "D."
 
-                    <p>
-                        The most common letters in the English Alphabet are e, t, a, i, o, n, s, h, and r.
+                                </p>
 
-                    </p>
-                    <p>
-                        Single-letter words are always "I" or "A".
-                    </p>
-                    <p>
-                        After that, if you get stuck, remember that "the" is the most common three-letter word in
-                        English.
-                    </p>
-                    <p>
-                        Other common three-letter words are: and, are, for, not, but, had, has, was, all, any, one, man,
-                        out, you, his, her, & can.
-                    </p>
-                    <p>
-                        If the second to last character of a word is an apostrophe, then the word likely ends with a "T"
-                        or
-                        "S," but sometimes a "D."
+                                <h4>Credits</h4>
+                                <p>
+                                    Thanks to PY & NF for the idea and inspiration and design help.
+                                </p>
+                                <p>
+                                    Thanks to VY for all her help and code review.
 
-                    </p>
+                                </p>
+                                <p>
 
-                    <h4>Credits</h4>
-                    <p>
-                        Thanks to PY & NF for the idea and inspiration and design help.
-                    </p>
-                    <p>
-                        Thanks to VY for all her help and code review.
+                                    Thanks to my friend CB for his encouragement and for teaching me the TIGR method.
+                                </p>
 
-                    </p>
-                    <p>
+                                <p>
+                                    Favicon Credit to Freepik - Flaticon
+                                </p>
 
-                        Thanks to my friend CB for his encouragement and for teaching me the TIGR method.
-                    </p>
+                            </div>
+                        </section>
+                        <footer class="modal-card-foot">
 
-                    <p>
-                        Favicon Credit to Freepik - Flaticon
-                    </p>
-
+                        </footer>
+                    </div>
                 </div>
-            </section>
-            <footer class="modal-card-foot">
-
-            </footer>
         </div>
-    </div>
+    </section>
+
+    </section>
+
 
 
 
