--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:description"
         content="Decode this is an encryption game. Your goal is to decode a quote that been encrypted using this friendly and fun web app.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="Images/Decodethis-OG-Image.png">
+    <meta property="og:image" content="https://decodethis.app/Images/Decodethis-OG-Image.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <script src="https://kit.fontawesome.com/d13891405c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
@@ -51,95 +51,95 @@
                     </footer>
                 </div>
 
-                <div class="modal is-active">
-                    <div class="modal-background"></div>
-                    <div id="instructions" class="modal-card">
-                        <header class="modal-card-head">
-                            <p class="modal-card-title">Decode This: How to Start</p>
-                            <button class="delete" aria-label="close"></button>
-                        </header>
-                        <section class="modal-card-body">
-
-                            <div class="content">
-                                <h4>About</h4>
-                                <p>Decode this is an encryption game. Your goal is to decode a quote from a free API of
-                                    inspirational quotes.
-                                </p>
-                                <p>
-                                    All of the letters in the quote have been switched with another random letter -- for
-                                    example all
-                                    of the "l"s in the example below have been changed for "e"s.
-                                </p>
-                                <h4>Example</h4>
-                                <blockquote id="example">Hello World<br>
-                                    Ndeeq Sqpez</blockquote>
-                                <h4>How to Decode a Quote</h4>
-
-                                <p>
-                                    It's a trial and error process -- use the 'from' and 'to' boxes to swap out a letter
-                                    that you
-                                    think may move you toward a solution.
-                                </p>
-                                <p>
-                                    If you make a mistake, click the incorrect letter to revert it to the original
-                                    encoded letter.
-                                </p>
-                                <h4>Tips</h4>
-
-                                <p>
-                                    The most common letters in the English Alphabet are e, t, a, i, o, n, s, h, and r.
-
-                                </p>
-                                <p>
-                                    Single-letter words are always "I" or "A".
-                                </p>
-                                <p>
-                                    After that, if you get stuck, remember that "the" is the most common three-letter
-                                    word in
-                                    English.
-                                </p>
-                                <p>
-                                    Other common three-letter words are: and, are, for, not, but, had, has, was, all,
-                                    any, one, man,
-                                    out, you, his, her, & can.
-                                </p>
-                                <p>
-                                    If the second to last character of a word is an apostrophe, then the word likely
-                                    ends with a "T"
-                                    or
-                                    "S," but sometimes a "D."
-
-                                </p>
-
-                                <h4>Credits</h4>
-                                <p>
-                                    Thanks to PY & NF for the idea and inspiration and design help.
-                                </p>
-                                <p>
-                                    Thanks to VY for all her help and code review.
-
-                                </p>
-                                <p>
-
-                                    Thanks to my friend CB for his encouragement and for teaching me the TIGR method.
-                                </p>
-
-                                <p>
-                                    Favicon Credit to Freepik - Flaticon
-                                </p>
-
-                            </div>
-                        </section>
-                        <footer class="modal-card-foot">
-
-                        </footer>
-                    </div>
-                </div>
         </div>
     </section>
 
     </section>
 
+    <div class="modal is-active">
+        <div class="modal-background"></div>
+        <div id="instructions" class="modal-card">
+            <header class="modal-card-head">
+                <p class="modal-card-title">Decode This: How to Start</p>
+                <button class="delete" aria-label="close"></button>
+            </header>
+            <section class="modal-card-body">
+
+                <div class="content">
+                    <h4>About</h4>
+                    <p>Decode this is an encryption game. Your goal is to decode a quote from a free API of
+                        inspirational quotes.
+                    </p>
+                    <p>
+                        All of the letters in the quote have been switched with another random letter -- for
+                        example all
+                        of the "l"s in the example below have been changed for "e"s.
+                    </p>
+                    <h4>Example</h4>
+                    <blockquote id="example">Hello World<br>
+                        Ndeeq Sqpez</blockquote>
+                    <h4>How to Decode a Quote</h4>
+
+                    <p>
+                        It's a trial and error process -- use the 'from' and 'to' boxes to swap out a letter
+                        that you
+                        think may move you toward a solution.
+                    </p>
+                    <p>
+                        If you make a mistake, click the incorrect letter to revert it to the original
+                        encoded letter.
+                    </p>
+                    <h4>Tips</h4>
+
+                    <p>
+                        The most common letters in the English Alphabet are e, t, a, i, o, n, s, h, and r.
+
+                    </p>
+                    <p>
+                        Single-letter words are always "I" or "A".
+                    </p>
+                    <p>
+                        After that, if you get stuck, remember that "the" is the most common three-letter
+                        word in
+                        English.
+                    </p>
+                    <p>
+                        Other common three-letter words are: and, are, for, not, but, had, has, was, all,
+                        any, one, man,
+                        out, you, his, her, & can.
+                    </p>
+                    <p>
+                        If the second to last character of a word is an apostrophe, then the word likely
+                        ends with a "T"
+                        or
+                        "S," but sometimes a "D."
+
+                    </p>
+
+                    <h4>Credits</h4>
+                    <p>
+                        Thanks to PY & NF for the idea and inspiration and design help.
+                    </p>
+                    <p>
+                        Thanks to VY for all her help and code review.
+
+                    </p>
+                    <p>
+
+                        Thanks to my friend CB for his encouragement and for teaching me the TIGR method.
+                    </p>
+
+                    <p>
+                        Favicon Credit to Freepik - Flaticon
+                    </p>
+
+                </div>
+            </section>
+            <footer class="modal-card-foot">
+
+            </footer>
+        </div>
+    </div>
 
 
 
