Moved everthing back into a single Class for ease in testing and troubleshooting

--- a/index.html
+++ b/index.html
@@ -147,11 +147,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-    <script src="playerInputs.js"></script>
-    <script src="templates.js"></script>
-    <script src="apiCall.js"></script>
-    <script src="render.js"></script>
-    <script src="launchApp.js"></script>
+    <script src="app.js"></script>
+
 </body>
 
 </html>
