added in link to Github account

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Decode This!</title>
-    <link rel="shortcut icon" type="image/jpg" href="Images/blackboard.png" />
+    <link rel="shortcut icon" type="image/jpg" href="Images/faviconMain.png" />
     <meta property="og:title" content="DecodeThis! A Quote Decryption Game">
     <meta property="og:site_name" content="Decode This!">
     <meta property="og:url" content="https://decodethis.app/">
@@ -136,7 +136,14 @@
                 </div>
             </section>
             <footer class="modal-card-foot">
-
+                <a href="https://github.com/ReadingTheDocumentation/DecodeThis" target="_blank">
+                    <p class="created-by">
+                        <span class="icon">
+                            <i id="question" class="fab fa-github"></i>
+                        </span>
+                        Brian Young, 2022
+                    </p>
+                </a>
             </footer>
         </div>
     </div>
