update CSS - background - buttons | update decoded modal to reload puzzle when closed

--- a/index.html
+++ b/index.html
@@ -52,11 +52,12 @@
                 </div>
 
         </div>
-    </section>
 
     </section>
 
-    <div class="modal is-active">
+
+
+    <div class="modal is-active rules">
         <div class="modal-background"></div>
         <div id="instructions" class="modal-card">
             <header class="modal-card-head">
@@ -73,11 +74,11 @@
                     <p>
                         All of the letters in the quote have been switched with another random letter -- for
                         example all
-                        of the "l"s in the example below have been changed for "e"s.
+                        of the "L"s in the example below have been changed for "E"s.
                     </p>
                     <h4>Example</h4>
-                    <blockquote id="example">Hello World<br>
-                        Ndeeq Sqpez</blockquote>
+                    <blockquote id="example">HELLO WORLD<br>
+                        NDEEQ SQPEZ</blockquote>
                     <h4>How to Decode a Quote</h4>
 
                     <p>
