Updated OG meta tags

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <meta property="og:title" content="DecodeThis! A Quote Decryption Game">
     <meta property="og:site_name" content="Decode This!">
     <meta property="og:url" content="https://decodethis.app/">
-    <meta property="og:description"
-        content="Decode this is an encryption game. Your goal is to decode a quote that been encrypted using this friendly and fun web app.">
+    <meta property="og:description" content="Test & practice your decryption skills by decoding a quote.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://decodethis.app/Images/Decodethis-OG-Image.png">
+    <meta property="og:image" content="https://decodethis.app/Images/acryptogramgame.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <script src="https://kit.fontawesome.com/d13891405c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
     <link id="mode" rel="stylesheet" href="darkmode.css">
+
 </head>
 
 <body>
