Updated OG meta tags

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Decode This!</title>
     <link rel="shortcut icon" type="image/jpg" href="Images/faviconMain.png" />
-    <meta property="og:title" content="DecodeThis! A Quote Decryption Game">
+    <meta property="og:title" content="Decode This! A Quote Decryption Game">
     <meta property="og:site_name" content="Decode This!">
     <meta property="og:url" content="https://decodethis.app/">
-    <meta property="og:description" content="Test & practice your decryption skills by decoding a quote.">
+    <meta property="og:description" content="Test & Practice Your Decryption Skills by Decoding a Quote.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://decodethis.app/Images/acryptogramgame.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
@@ -22,17 +22,13 @@
 
 <body>
     <section>
-
         <div class="column is-one-third">
-
             <section id='app'>
-
                 <div class="card">
                     <header class="card-header">
                         <p class="card-header-title">
                             Decode This!
                         </p>
-
                         <button class="card-header-icon" aria-label="more options">
                             <span class="icon">
                                 <i id="question" class="far fa-question-circle" aria-hidden="true"></i>
@@ -41,8 +37,6 @@
                     </header>
                     <div class="card-content">
                         <div class="content">
-
-
                         </div>
                     </div>
                     <footer class="card-footer">
@@ -52,12 +46,8 @@
 
                     </footer>
                 </div>
-
         </div>
-
     </section>
-
-
 
     <div class="modal is-active rules">
         <div class="modal-background"></div>
@@ -72,7 +62,6 @@
                 <button class="delete" aria-label="close"></button>
             </header>
             <section class="modal-card-body">
-
                 <div class="content">
                     <h4>About</h4>
                     <p>Decode this is an encryption game. Your goal is to decode a quote from a free API of
@@ -87,7 +76,6 @@
                     <blockquote id="example">HELLO WORLD<br>
                         NDEEQ SQPEZ</blockquote>
                     <h4>How to Decode a Quote</h4>
-
                     <p>
                         It's a trial and error process -- use the 'from' and 'to' boxes to swap out a letter
                         that you
@@ -101,7 +89,6 @@
 
                     <p>
                         The most common letters in the English Alphabet are e, t, a, i, o, n, s, h, and r.
-
                     </p>
                     <p>
                         Single-letter words are always "I" or "A".
@@ -130,17 +117,13 @@
                     </p>
                     <p>
                         Thanks to VY for all her help and code review.
-
                     </p>
                     <p>
-
                         Thanks to my friend CB for his encouragement and for teaching me the TIGR method.
                     </p>
-
                     <p>
                         Favicon Credit to Freepik - Flaticon
                     </p>
-
                 </div>
             </section>
             <footer class="modal-card-foot">
@@ -155,15 +138,8 @@
             </footer>
         </div>
     </div>
-
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
     <script src="app.js"></script>
-
 </body>
 
 </html>
